# spln2324

./: README.md
TPC1/: README.md  ex1.py
TPC2/: README.md
TPC2/P1/: README.md  pyproject.toml
TPC2/P1/word_freq/: __init__.py
TPC2/P1/word_freq/data/: treatWords.ipynb  wordTablePT.txt
TPC3/: README.md
TPC3/P2/: METADATA.json  makepyproject.py  pyproject.toml
TPC4/: README.md
TPC5/: README.md  md.md  spacytomd.py
TPC6/: README.md  findamingos.py
